--- a/src/app/search-page/search-page.component.html
+++ b/src/app/search-page/search-page.component.html
@@ -1,3 +1,13 @@
-<p>
-  search-page works!
-</p>
+<header class="navbar">
+    <div class="navbar-brand">
+        <span class="site-name">Search @Twitter</span>
+    </div>
+    <div class="navbar-nav">
+        <div class="auto-refresh--countdown">
+            <div class="auto-refresh--text">Auto refresh in <span class="auto-refresh--count">{{timeLeft}}</span> <span class="auto-refresh--sec"> second{{(timeLeft == 1) ? '' : 's'}}</span></div>
+        </div>
+    </div>
+</header>
+<div class="">
+    
+</div>
