--- a/src/app/search-page/search-page.component.html
+++ b/src/app/search-page/search-page.component.html
@@ -8,6 +8,34 @@
         </div>
     </div>
 </header>
-<div class="">
-    
+<div class="container">
+
+    <div class="search-box">
+        <div class="search-box-wrapper">
+            <input type="search" class="input-search" id="s">
+        </div>
+    </div>
+
+    <div class="search-results">
+        <div class="tweet-wrap">
+
+            <div class="tweet-widget">
+                <div class="tweet-left-col">
+                    <img class="img-rounded tweet-user-pic" src="assets/img/profile-dummy.png" alt/>
+                </div>
+                <div class="tweet-right-col">                            
+                    <div class="tweet-user-info">
+                        <span class="tweet-user-fullname">Full Name</span>
+                        <span class="tweet-user-account">@account</span>
+                        <span class="tweet-user-tweet-time">Mon Nov 11 14:55:01 +0000 2019</span>
+                    </div>
+                    <div class="tweet-user-comment">
+                        Adobe XD 2020 - Պռոյեկտի վերականգնում (Document History) in Armenian https://t.co/mGLjatXimo via @YouTube
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
 </div>
