--- a/src/assets/SASS/_search.scss
+++ b/src/assets/SASS/_search.scss
@@ -1,6 +1,6 @@
 .search {
     &-box {
-        margin: 25px 0;
+        margin: 40px 0 25px;
         .input-search {
             height: 45px;
             padding: 5px 30px 5px 48px;
