--- a/src/app/search-page/search-page.component.html
+++ b/src/app/search-page/search-page.component.html
@@ -4,7 +4,7 @@
     </div>
     <div class="navbar-nav">
         <div class="auto-refresh--countdown">
-            <div class="auto-refresh--text">Auto refresh in <span class="auto-refresh--count">{{timeLeft}}</span> <span class="auto-refresh--sec"> second{{(timeLeft == 1) ? '' : 's'}}</span></div>
+            <div *ngIf="interval" class="auto-refresh--text">Auto refresh in <span class="auto-refresh--count">{{timeLeft}}</span> <span class="auto-refresh--sec"> second{{(timeLeft == 1) ? '' : 's'}}</span></div>
         </div>
     </div>
 </header>
@@ -12,74 +12,15 @@
 
     <div class="search-box">
         <div class="search-box-wrapper">
-            <input type="search" class="input-search" id="s">
+            <input type="search" class="input-search" id="input-search">
         </div>
     </div>
 
     <div class="search-results">
         <div class="tweet-wrap">
-
-            <div class="tweet-widget">
-                <div class="tweet-left-col">
-                    <img class="img-rounded tweet-user-pic" src="assets/img/profile-dummy.png" alt/>
-                </div>
-                <div class="tweet-right-col">                            
-                    <div class="tweet-user-info">
-                        <span class="tweet-user-fullname">Full Name</span>
-                        <span class="tweet-user-account">@account</span>
-                        <span class="tweet-user-tweet-time">Mon Nov 11 14:55:01 +0000 2019</span>
-                    </div>
-                    <div class="tweet-user-comment">
-                        Adobe XD 2020 - Պռոյեկտի վերականգնում (Document History) in Armenian https://t.co/mGLjatXimo via @YouTube
-                    </div>
-                </div>
-            </div>
-            <div class="tweet-widget">
-                <div class="tweet-left-col">
-                    <img class="img-rounded tweet-user-pic" src="assets/img/profile-dummy.png" alt/>
-                </div>
-                <div class="tweet-right-col">                            
-                    <div class="tweet-user-info">
-                        <span class="tweet-user-fullname">Full Name</span>
-                        <span class="tweet-user-account">@account</span>
-                        <span class="tweet-user-tweet-time">Mon Nov 11 14:55:01 +0000 2019</span>
-                    </div>
-                    <div class="tweet-user-comment">
-                        Adobe XD 2020 - Պռոյեկտի վերականգնում (Document History) in Armenian https://t.co/mGLjatXimo via @YouTube
-                    </div>
-                </div>
-            </div>
-            <div class="tweet-widget">
-                <div class="tweet-left-col">
-                    <img class="img-rounded tweet-user-pic" src="assets/img/profile-dummy.png" alt/>
-                </div>
-                <div class="tweet-right-col">                            
-                    <div class="tweet-user-info">
-                        <span class="tweet-user-fullname">Full Name</span>
-                        <span class="tweet-user-account">@account</span>
-                        <span class="tweet-user-tweet-time">Mon Nov 11 14:55:01 +0000 2019</span>
-                    </div>
-                    <div class="tweet-user-comment">
-                        Adobe XD 2020 - Պռոյեկտի վերականգնում (Document History) in Armenian https://t.co/mGLjatXimo via @YouTube
-                    </div>
-                </div>
-            </div>
-            <div class="tweet-widget">
-                <div class="tweet-left-col">
-                    <img class="img-rounded tweet-user-pic" src="assets/img/profile-dummy.png" alt/>
-                </div>
-                <div class="tweet-right-col">                            
-                    <div class="tweet-user-info">
-                        <span class="tweet-user-fullname">Full Name</span>
-                        <span class="tweet-user-account">@account</span>
-                        <span class="tweet-user-tweet-time">Mon Nov 11 14:55:01 +0000 2019</span>
-                    </div>
-                    <div class="tweet-user-comment">
-                        Adobe XD 2020 - Պռոյեկտի վերականգնում (Document History) in Armenian https://t.co/mGLjatXimo via @YouTube
-                    </div>
-                </div>
-            </div>
-
+            <ng-container *ngFor="let tweet of tweets">
+                <app-single-tweet></app-single-tweet>
+            </ng-container>
         </div>
     </div>
 
