--- a/src/app/search-page/search-page.component.html
+++ b/src/app/search-page/search-page.component.html
@@ -3,13 +3,13 @@
         <span class="site-name">Search @Twitter</span>
     </div>
     <div class="navbar-nav">
-        <div>
-            <button type="button" (click)="getAllTweets()">Refresh</button>
+        <div class="header-action-btn">
+            <button type="button" class="btn-icon" (click)="getAllTweets()"><img src="assets/img/refresh.svg" alt="refresh" width="25" height="25" /></button>
         </div>
-        <div>
-            <button *ngIf="!autoRefresh" type="button" (click)="changeAutoRefresh(true)">Start</button>
-            <button *ngIf="autoRefresh" type="button" (click)="changeAutoRefresh(false)">Stop</button>
-        </div>
+        <!-- <div class="header-action-btn">
+            <button *ngIf="!autoRefresh" class="btn-icon" type="button" (click)="changeAutoRefresh(true)"><img src="assets/img/play.svg" alt="refresh" width="20" height="20" /></button>
+            <button *ngIf="autoRefresh" class="btn-icon" type="button" (click)="changeAutoRefresh(false)"><img src="assets/img/stop.svg" alt="refresh" width="20" height="20" /></button>
+        </div> -->
         <div class="auto-refresh--countdown">
             <div *ngIf="!autoRefresh" class="auto-refresh--text">Auto refresh disbled</div>
             <div *ngIf="interval && autoRefresh" class="auto-refresh--text">Auto refresh in <span class="auto-refresh--count">{{timeLeft}}</span> <span class="auto-refresh--sec"> second{{(timeLeft == 1) ? '' : 's'}}</span></div>
@@ -21,8 +21,10 @@
     <div class="search-box">
         <div class="search-box-wrapper">
             <input type="text" [(ngModel)]="searchParam" class="input-search" id="input-search" (keyup)="enterClick($event)">
-            <i [ngClass]="{'hide' : !searchParam}" (click)="clearSearch()">X</i>
-            <a href="javascript:void(0);" class="search-trigger d-inline-flex" (click)="searchTweets()">Search</a>
+            <div class="search-box-actions">
+                <i [ngClass]="{'hide' : !searchParam}" class="clearSearch" (click)="clearSearch()">X</i>
+                <a href="javascript:void(0);" class="search-trigger d-inline-flex" (click)="searchTweets()">Search</a>
+            </div>
         </div>
     </div>
 
