--- a/src/assets/SASS/_helpers.scss
+++ b/src/assets/SASS/_helpers.scss
@@ -9,6 +9,7 @@ body {
     padding: 0;
     font-size: 16px;
     font-family: $font-roboto;
+    padding-top: 58px;
 }
 
 .container {
@@ -34,5 +35,20 @@ body {
         border-radius: 56%;
         max-width: 100%;
         height: auto;
+    }
+}
+
+.btn {
+    &-icon {
+        border: 0;
+        background: transparent;
+        padding: 0;
+        margin: 0 5px;
+        vertical-align: middle;
+        outline: 0;
+        color: $grey;
+        font-size: 0;
+        line-height: normal;
+        cursor: pointer;
     }
 }
