--- a/src/assets/SASS/_search.scss
+++ b/src/assets/SASS/_search.scss
@@ -1,9 +1,13 @@
 .search {
     &-box {
         margin: 40px 0 25px;
+        &-wrapper {
+            position: relative;
+        }
+
         .input-search {
             height: 45px;
-            padding: 5px 30px 5px 48px;
+            padding: 5px 150px 5px 48px;
             background-image: url(assets/img/search-icon.svg);
             background-position: 12px 50%;
             background-size: 30px 30px;
@@ -16,6 +20,73 @@
             width: 100%;
             border-radius: 26px;
             font-size: 0.875rem;
+            
+            @include media-max(md){
+                padding-right: 125px;
+            }
+        }
+
+        &-actions {
+            position: absolute;
+            right: 5px;
+            top: 50%;
+            transform: translateY(-50%);
+            display: flex;
+            align-items: center;
+        }
+
+    }
+    &-trigger {
+        font-size: 12px;
+        letter-spacing: 1.5px;
+        text-decoration: none;
+        line-height: normal;
+        border-radius: 26px;
+        color: #fff;
+        padding: 10px 30px;
+        text-transform: uppercase;
+        transition: box-shadow 0.15s ease,transform 0.15s ease;
+        text-shadow: 0 1px 0 #4b5ef0;
+        background: #aeb7ff;
+        background: linear-gradient(#aeb7ff,#5468ff) no-repeat;
+
+        &:active {
+            box-shadow: inset 0 2px 0 1px rgba(132,138,184,0.11), inset 0 2px 9px 0 rgba(93,100,148,0.5), inset 0 -1px 0 1px #5468ff;
+        }
+        @include media-max(md){
+            padding: 10px 18px;
         }
     }
+    &-results {
+        margin-bottom: 40px;
+    }
+}
+
+.clearSearch {
+    font-size: 0;
+    font-style: normal;
+    width: 15px;
+    height: 15px;
+    display: inline-block;
+    margin-right: 10px;
+    position: relative;
+    cursor: pointer;
+
+    &:before,
+    &:after {
+        content: "";
+        position: absolute;
+        top: 50%;
+        left: 50%;        
+        width: 100%;
+        height: 2px;
+        background-color: $grey;
+    }
+    &:before {
+        transform: translate(-50% ,-50%) rotate(45deg);
+    }
+    &::after {
+        transform: translate(-50%, -50%) rotate(-45deg);
+    }
+    
 }
