--- a/src/assets/SASS/_tweet_card.scss
+++ b/src/assets/SASS/_tweet_card.scss
@@ -1,4 +1,24 @@
 .tweet {
+    &-wrap {
+        display: flex;
+        flex-wrap: wrap;        
+
+        app-single-tweet {
+            width: 100%;
+        }
+
+        @include media-between(md,lg){
+            margin-left:-10px;
+            margin-right:-10px;
+
+            app-single-tweet  {            
+                display: flex;
+                width: 50%;
+                padding-left: 10px;
+                padding-right: 10px;
+            }
+        }
+    }
     &-widget {
         display: flex;
         padding: 10px 15px;
@@ -12,10 +32,10 @@
                 max-width: 50px;
                 height: 50px;
             }
-        }
+        }    
     }   
     &-left {
-        col {
+        &-col {
             width: 50px;
         }
     }
@@ -28,6 +48,7 @@
     &-user {
         &-info {
             display: flex;
+            flex-wrap: wrap;
             align-items: center;  
             margin-bottom: 10px;          
         }
@@ -37,15 +58,25 @@
             font-size: 0.75rem;
             color: $telluric;            
         }
+        
+        &-fullname,
         &-account {
-            padding-left: 10px;
-        }
-        &-tweet-time {
-            margin-left: auto;
-        }
+            padding-right: 10px;
+        }        
         &-comment {
             font-size: 0.875rem;
-            color: #707070;
+            color: $grey;
+        }
+        &-tweet-time {
+            width: 100%;
+
+            @include media-min(lg){
+                width: auto;
+
+                &-tweet-time {
+                    margin-left: auto;
+                }
+            }
         }
     }
 }
