--- a/src/assets/SASS/_variables.scss
+++ b/src/assets/SASS/_variables.scss
@@ -3,5 +3,6 @@ $lightblue: #f5f5fa;
 $input-text: #3a416f;
 $telluric: #5d6494;
 $lightgrey: #f5f5f5;
+$grey: #707070;
 
 $font-roboto: 'Roboto', sans-serif;
