--- a/src/app/search-page/search-page.component.html
+++ b/src/app/search-page/search-page.component.html
@@ -4,7 +4,7 @@
     </div>
     <div class="navbar-nav">
         <div class="header-action-btn">
-            <button type="button" class="btn-icon" (click)="getAllTweets()"><img src="assets/img/refresh.svg" alt="refresh" width="25" height="25" /></button>
+            <button *ngIf="interval" type="button" class="btn-icon" (click)="getAllTweets()"><img src="assets/img/refresh.svg" alt="refresh" width="25" height="25" /></button>
         </div>
         <div class="auto-refresh--countdown">
             <div *ngIf="interval" class="auto-refresh--text">Auto refresh in <span class="auto-refresh--count">{{timeLeft}}</span> <span class="auto-refresh--sec"> second{{(timeLeft == 1) ? '' : 's'}}</span></div>
