--- a/src/assets/SASS/_navbar.scss
+++ b/src/assets/SASS/_navbar.scss
@@ -6,6 +6,7 @@
     display: flex;
     align-items: center;
     flex-direction: row;
+    z-index: 1;
 
     .site-name {
         font-size: 0.937rem;
