--- a/src/assets/SASS/_tweet_card.scss
+++ b/src/assets/SASS/_tweet_card.scss
@@ -25,7 +25,9 @@
         border: 1px solid $lightgrey;
         border-radius: 4px;
         margin-bottom: 12px;
-        box-shadow: 0 1px 2px 0 rgba(37,44,97,.15), 0 0px 2px 0 rgba(93,100,148,.2);
+        box-shadow: 0 1px 2px 0 rgba(37,44,97,.15);
+        animation: fadeIn 0.3s linear;
+        animation-fill-mode: both;
 
         .tweet-user {
             &-pic {
@@ -33,6 +35,12 @@
                 height: 50px;
             }
         }    
+        // Set delay per List Item
+        @for $i from 1 through 20 {
+          &:nth-child(#{$i}) {
+            animation-delay: .05s * $i;
+          }
+        }
     }   
     &-left {
         &-col {
@@ -79,4 +87,21 @@
             }
         }
     }
+}
+
+
+
+// Keyframe animation
+@-webkit-keyframes fadeIn {
+  0% {
+    opacity: 0;
+    top: 100px;
+  }
+  75% {
+    opacity: 0.5;
+    top: 0px;
+  }
+  100% {
+    opacity: 1;
+  }
 }
