--- a/src/assets/SASS/_tweet_card.scss
+++ b/src/assets/SASS/_tweet_card.scss
@@ -41,6 +41,12 @@
             animation-delay: .05s * $i;
           }
         }
+        a {
+            text-decoration: none;
+            &:hover, &:focus {
+                text-decoration: underline;
+            }
+        }
     }   
     &-left {
         &-col {
@@ -58,7 +64,7 @@
             display: flex;
             flex-wrap: wrap;
             align-items: center;  
-            margin-bottom: 10px;          
+            margin-bottom: 10px;         
         }
         &-fullname,
         &-account,
