--- a/src/app/single-tweet/single-tweet.component.html
+++ b/src/app/single-tweet/single-tweet.component.html
@@ -1,15 +1,14 @@
+    <a href="https://twitter.com/{{tweet.user.screen_name}}/status/{{tweet.id_str}}" class="tweet-link"></a>
     <div class="tweet-left-col">
-        <a href="https://twitter.com/{{tweet.user.screen_name}}"><img class="img-rounded tweet-user-pic" src="{{tweet.user.profile_image_url}}" alt/></a>
+        <a href="https://twitter.com/{{tweet.user.screen_name}}" class="tweet-user-link"><img class="img-rounded tweet-user-pic" src="{{tweet.user.profile_image_url}}" alt/></a>
     </div>
     <div class="tweet-right-col">                            
         <div class="tweet-user-info">
-            <a href="https://twitter.com/{{tweet.user.screen_name}}"><span class="tweet-user-fullname">{{tweet.user.name}}</span></a>
+            <span class="tweet-user-fullname"><a href="https://twitter.com/{{tweet.user.screen_name}}">{{tweet.user.name}}</a></span>
             <span class="tweet-user-account">@{{tweet.user.screen_name}}</span>
             <span class="tweet-user-tweet-time">{{tweet.created_at}}</span>
         </div>
-        <a href="https://twitter.com/{{tweet.user.screen_name}}/status/{{tweet.id_str}}">
-            <div class="tweet-user-comment">
-                {{tweet.text}}
-            </div>
-        </a>
+        <div class="tweet-user-comment">
+            {{tweet.text}}
+        </div>
     </div>
