--- a/src/assets/SASS/_helpers.scss
+++ b/src/assets/SASS/_helpers.scss
@@ -60,3 +60,10 @@ body {
 .w-100{
     width: 100%;
 }
+
+a{
+    text-decoration: none;
+    &:hover{
+        text-decoration: underline;
+    }
+}
