--- a/src/assets/SASS/_loader.scss
+++ b/src/assets/SASS/_loader.scss
@@ -24,7 +24,7 @@
 .loadingBlock{
 	height: 75px;
 	margin-bottom: 12px;
-	padding: 10px 15px;
+	padding: 15px;
 	border: 1px solid $lightgrey;
 	position: relative;
 	&-content{
