--- a/src/assets/SASS/_search.scss
+++ b/src/assets/SASS/_search.scss
@@ -53,6 +53,10 @@
         &:active {
             box-shadow: inset 0 2px 0 1px rgba(132,138,184,0.11), inset 0 2px 9px 0 rgba(93,100,148,0.5), inset 0 -1px 0 1px #5468ff;
         }
+        &:hover{
+            text-decoration: none;
+            background: darken($primary, 5%);
+        }
         @include media-max(md){
             padding: 10px 18px;
         }
