--- a/src/assets/SASS/_helpers.scss
+++ b/src/assets/SASS/_helpers.scss
@@ -67,3 +67,12 @@ a{
         text-decoration: underline;
     }
 }
+
+.info-box{
+    text-align: center;
+    padding: 25px 20px;
+    width: 100%;
+    margin-bottom: 20px;
+    background: #f5f5f5;
+    border-radius: 5px;
+}
