--- a/src/app/single-tweet/single-tweet.component.html
+++ b/src/app/single-tweet/single-tweet.component.html
@@ -1,14 +1,20 @@
-    <a href="https://twitter.com/{{tweet.user.screen_name}}/status/{{tweet.id_str}}" class="tweet-link"></a>
-    <div class="tweet-left-col">
-        <a href="https://twitter.com/{{tweet.user.screen_name}}" class="tweet-user-link"><img class="img-rounded tweet-user-pic" src="{{tweet.user.profile_image_url}}" alt/></a>
+<!-- Link for card -->
+<a href="https://twitter.com/{{tweet.user.screen_name}}/status/{{tweet.id_str}}" class="tweet-link"></a>
+<!-- Profile image -->
+<div class="tweet-left-col">
+    <a href="https://twitter.com/{{tweet.user.screen_name}}" class="tweet-user-link"><img class="img-rounded tweet-user-pic" src="{{tweet.user.profile_image_url}}" alt/></a>
+</div>
+<div class="tweet-right-col">
+    <div class="tweet-user-info">
+        <!-- Username -->
+        <span class="tweet-user-fullname"><a href="https://twitter.com/{{tweet.user.screen_name}}">{{tweet.user.name}}</a></span>
+        <!-- Screen name -->
+        <span class="tweet-user-account">@{{tweet.user.screen_name}}</span>
+        <!-- Date and Time -->
+        <span class="tweet-user-tweet-time">{{tweet.created_at}}</span>
     </div>
-    <div class="tweet-right-col">                            
-        <div class="tweet-user-info">
-            <span class="tweet-user-fullname"><a href="https://twitter.com/{{tweet.user.screen_name}}">{{tweet.user.name}}</a></span>
-            <span class="tweet-user-account">@{{tweet.user.screen_name}}</span>
-            <span class="tweet-user-tweet-time">{{tweet.created_at}}</span>
-        </div>
-        <div class="tweet-user-comment">
-            {{tweet.text}}
-        </div>
+    <!-- Tweet content -->
+    <div class="tweet-user-comment">
+        {{tweet.text}}
     </div>
+</div>
